# seq_view

./: CMakeLists.txt  LICENSE.txt  README.md  conanfile.py
seq_view/: CMakeLists.txt
seq_view/include/: seq_view.hpp
test_project/: CMakeLists.txt  test_project.cpp
